# neurofab-z1-cluster

./: .gitignore  API_REFERENCE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE  PIN_REFERENCE.md  PREREQUISITES.md  README.md  TEST_DEPLOYMENT_GUIDE.md  build.py  build_dual.py  flash_controller.py  flash_node.py  test_deployment.py
.github/: copilot-instructions.md
FirmwareReleases/12node/: controller_12.uf2  node_dual_12_0.uf2  node_dual_12_1.uf2  node_dual_12_10.uf2  node_dual_12_11.uf2  node_dual_12_2.uf2  node_dual_12_3.uf2  node_dual_12_4.uf2  node_dual_12_5.uf2  node_dual_12_6.uf2  node_dual_12_7.uf2  node_dual_12_8.uf2  node_dual_12_9.uf2  z1_controller_12.uf2  z1_node_12_0.uf2  z1_node_12_1.uf2  z1_node_12_10.uf2  z1_node_12_11.uf2  z1_node_12_2.uf2  z1_node_12_3.uf2  z1_node_12_4.uf2  z1_node_12_5.uf2  z1_node_12_6.uf2  z1_node_12_7.uf2  z1_node_12_8.uf2  z1_node_12_9.uf2
FirmwareReleases/12node/apponly/: bootloader_12.uf2  node_app_12_0.uf2  node_app_12_1.uf2  node_app_12_10.uf2  node_app_12_11.uf2  node_app_12_2.uf2  node_app_12_3.uf2  node_app_12_4.uf2  node_app_12_5.uf2  node_app_12_6.uf2  node_app_12_7.uf2  node_app_12_8.uf2  node_app_12_9.uf2
FirmwareReleases/16node/: controller_16.uf2  node_dual_16.uf2  z1_controller_16.uf2  z1_node_16.uf2
FirmwareReleases/16node/apponly/: bootloader_16.uf2  node_app_16.uf2
bootloader/: CMakeLists.txt  bootloader_main.c  bootloader_memmap.ld  ota_engine.c  ota_engine.h  z1-pt.json
build_tools/: elf2uf2.py  merge_dual_partition.py  prepend_app_header.py  uf2_prepend_bs2.py
common/FatFs_SPI/: CMakeLists.txt  hw_config.c
common/FatFs_SPI/ff15/source/: ffconf.h
common/FatFs_SPI/src/: rtc.c
common/core_queue/: core_queue.c  core_queue.h
common/oled/: CMakeLists.txt  ssd1306.c  ssd1306.h
common/psram/: CMakeLists.txt  psram_rp2350.c  psram_rp2350.h
common/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h  sd_card_stub.c  sd_card_stub.h  z1_config.c  z1_config.h
common/z1_broker/: CMakeLists.txt  z1_broker.c  z1_broker.h
common/z1_commands/: CMakeLists.txt  z1_commands.c  z1_commands.h
common/z1_onyx_bus/: CMakeLists.txt  z1_bus.c  z1_bus.h  z1_bus_rx.pio  z1_bus_rx.pio.h  z1_bus_tx.pio  z1_bus_tx.pio.h  z1_onyx_bus_pins.h
controller/: CMakeLists.txt  CMakeLists_BACKUP.txt  CMakeLists_snn8.txt  controller_main.c  controller_pins.h  controller_pins_v1.h  controller_pins_v2.h  hw_config.c  main_backup_snippet.txt  w5500_eth.c  w5500_eth.h  w5500_eth_BACKUP.c  w5500_eth_BACKUP.h  z1_http_api.c  z1_http_api.h
documentation/: API_REFERENCE.md  ASYNC_SPIKE_INJECTION.md  BUILD_INSTRUCTIONS.md  DOCUMENTATION_INDEX.md  DUAL_PARTITION_GUIDE.md  FILE_MANAGEMENT_GUIDE.md  OTA_TROUBLESHOOTING_GUIDE.md  OTA_WORKFLOWS.md  PIN_REFERENCE.md  RESET_TEST_GUIDE.md  SNN_ENGINE_SPEC_AND_FIXES.md  STREAMING_FILE_SYSTEM.md  TEST_DEPLOYMENT_GUIDE.md
node/: CMakeLists.txt  node_main.c  node_pins.h  z1_snn_engine.c  z1_snn_engine.h
python_tools/: COMPREHENSIVE_TOOLS_REFERENCE.md  MODIFICATIONS.md
python_tools/deprecated/: ncat  ncp
python_tools/examples/: MNIST_PROPER_README.md  cluster_config.json  mnist_lateral_inhibition.json  mnist_optimized.json  mnist_proper.json  mnist_snn.json  mnist_stdp.json  test_engine.json  test_spikes.json  test_spikes2.json  test_spikes_manual.json  testignore128K.json  testignore16K.json  testignore256K.json  testignore32K.json  testignore512K.json  xor_4of4.json  xor_correct.json  xor_final.json  xor_input_00.json  xor_input_01.json  xor_input_10.json  xor_input_11.json  xor_simple.json  xor_snn.json  xor_snn_improved.json  xor_working.json
python_tools/lib/: __init__.py  api_server.py  cluster.py  cluster_config.py  node.py  snn_compiler.py  snn_engine.py  z1_client.py
scripts/: backup.py
