add_library(FatFs_SPI INTERFACE)
target_sources(FatFs_SPI INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/ff15/source/ffsystem.c
    ${CMAKE_CURRENT_LIST_DIR}/ff15/source/ffunicode.c
    ${CMAKE_CURRENT_LIST_DIR}/ff15/source/ff.c
    ${CMAKE_CURRENT_LIST_DIR}/sd_driver/sd_spi.c
    ${CMAKE_CURRENT_LIST_DIR}/sd_driver/demo_logging.c
    ${CMAKE_CURRENT_LIST_DIR}/sd_driver/spi.c
    ${CMAKE_CURRENT_LIST_DIR}/sd_driver/sd_card.c
    ${CMAKE_CURRENT_LIST_DIR}/sd_driver/crc.c
    ${CMAKE_CURRENT_LIST_DIR}/src/glue.c
    ${CMAKE_CURRENT_LIST_DIR}/src/f_util.c
    ${CMAKE_CURRENT_LIST_DIR}/src/ff_stdio.c
    ${CMAKE_CURRENT_LIST_DIR}/src/my_debug.c
    # rtc.c excluded - FF_FS_NORTC=1 in ffconf.h (no RTC on RP2350B)
    # hw_config.c is NOT here - it's controller-specific (nodes have no SD card!)
)

# FatFS public headers
target_include_directories(FatFs_SPI INTERFACE
    ff15/source
    sd_driver
    include
)

# FF_FS_NORTC=1 in ffconf.h - No RTC support (fixed timestamps)
# RP2350B does not have hardware_rtc library (RP2040 only)
# Files will use fixed timestamp: 2026-01-06 00:00:00

# Link Pico SDK libraries - INTERFACE propagates all includes and dependencies
target_link_libraries(FatFs_SPI INTERFACE
        pico_stdlib
        hardware_spi
        hardware_dma
        hardware_clocks
)
